--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,12 @@
 <main>
     <section class="tarefas">
-        <div class="tarefas">
+        <div class="tarefa">
             <form action="">
-                <input type="radio" id="tarefa-1">
-                <label for="tarefa-1">Completar curso de JavaScript</label>
+                <div>
+                    <input type="radio" id="tarefa-1">
+                    <label for="tarefa-1">Completar curso de JavaScript</label>
 
+                </div>
                 <button>
                     <img src="/imagens/x-icon.png" alt="ìcone de x para excluir a tarefa">
                 </button>
