primeiros ajustes do desktop

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,7 +32,12 @@ header {
     padding: 3rem 1.75rem 0;
 }
 
-header div {
+header > div {
+    max-width: 33.75rem;
+    margin-inline: auto;
+}
+
+header div div {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -51,11 +56,12 @@ header form {
 }
 
 header form input {
+    padding: 0.75rem;
     padding-block: 1.12rem;
     border-radius: 0.3125rem;
     border: none;
     box-shadow: 8px 35px 58px -15px var(--input-box-shadow);
-    width: 100;
+    width: 100%;
     outline: none;
     font-size: 0.75rem;
     color: var(--input-color);
@@ -79,6 +85,8 @@ main {
     box-shadow: var(--box-shadow);
     border-radius: 0.3125rem;
     margin-top: -1rem;
+    max-width: 33.75rem;
+    margin-inline: auto;
 }
 
 .tarefas .tarefa {
@@ -123,16 +131,48 @@ main {
     color: var(--infor-text-color);
 }
 
+.informacoes .botoes {
+    display: none;
+}
+
 .botoes {
     padding-block: 1rem;
     background: var(--bg-tarefas);
     border-radius: 0.3125rem;
     margin-top: 1rem;
+    max-width: 33.75rem;
+    margin-inline: auto;
 
     display: flex;
     justify-content: center;
     gap:1.2rem;
 
     font-size: 0.875rem;
+}
+
+@media(min-width: 1000px) {
+    section.botoes {
+        display: none;
+    }
+
+    .informacoes .botoes {
+        display: flex;
+        padding: 0;
+        margin: 0;
+    }
+
+    .tarefa button {
+        visibility: hidden;
+    }
+
+    .tarefa input:hover,
+    .tarefa label:hover,
+    .tarefa button:hover {
+        cursor: pointer;
+    }
+
+    .tarefa:hover button {
+        visibility: initial;
+    }
 }
 
