--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,19 +10,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>ToDo App</title>
 </head>
+
 <body>
     <header>
         <div>
-            <h1>To Do</h1>
-            <img src="/imagens/moon-icon.png" alt="ícone de Lua">
-        </div>
+            <div>
+                <h1>To Do</h1>
+                <img src="/imagens/moon-icon.png" alt="ícone de Lua">
+            </div>
 
-        <form action="">
-            <input type="text" id="nova-tarefa" placeholder="Criar uma nova tarefa" name="novaTarefa">
-            <button type="submit">Criar</button>
-        </form>
+            <form action="">
+                <input type="text" id="nova-tarefa" placeholder="Criar uma nova tarefa" name="novaTarefa">
+                <button type="submit">Criar</button>
+            </form>
+        </div>
     </header>
 
     {{{body}}}
 </body>
+
 </html>
