--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,7 +20,7 @@
     --border-color: #E3E4F1;
     --text-color: #494C6B;
     --todo-complete-color: #D1D2DA;
-    --infor-text-color: #9495A5;
+    --info-text-color: #9495A5;
     --info-button-hover: #494C68;
     --info-button-active: #3A7CFD;
 }
@@ -32,15 +32,15 @@ body.dark {
     --input-color: #C8CBE7;
     --input-bg: #25273D;
     --placeholder-color: #767992;
-    --button-color: #25273d;
-    --button-color-hover: #585E7E;
+    --button-color: #25273D;
+    --button-color-hover: #5B5E7E;
     --bg-body: #171823;
-    --bg-tarefas: #25273d;
+    --bg-tarefas: #25273D;
     --box-shadow: 0px 35px 50px -15px rgba(0, 0, 0.50);
     --border-color: #393A4B;
     --text-color: #C8CBE7;
     --todo-complete-color: #4D5067;
-    --infor-text-color: #585E7E;
+    --info-text-color: #5B5E7E;
     --info-button-hover: #E3E4F1;
     --info-button-active: #3A7CFD;
 } 
@@ -163,13 +163,13 @@ main {
     display: flex;
     justify-content: space-between;
     font-size: 0.75rem;
-    color: var(--infor-text-color);
+    color: var(--info-text-color);
 }
 
 .informacoes a,
 .botoes a  {
     text-decoration: none;
-    color: var(--infor-text-color);
+    color: var(--info-text-color);
 }
 
 .informacoes .botoes {
